se agrego texto basura
se agrego descripcion de los productos y donde adquirirlos

--- a/indexJ.html
+++ b/indexJ.html
@@ -41,5 +41,7 @@
            de productos comestibles. 
     </p>
 
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate obcaecati, id mollitia ad minus placeat nihil nisi sapiente quisquam officia aliquam ipsa explicabo itaque saepe expedita laboriosam consequatur accusantium facilis ducimus eum quibusdam earum unde deleniti. Culpa facilis, quae repellendus nihil nostrum fuga beatae nobis!</p>
+
 </body>
 </html>
